--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Mi sitio web</title>
+</head>
+<body>
 
+    <h1>Nombre Apellidos</h1>
+
+    <h2>Práctica 1 - DNS y Hosting</h2>
+
+    <p>Correo: <a href="mailto:tuemail@correo.com">tuemail@correo.com</a></p>
+
+    <p>
+        Servicio utilizado:
+        <a href="https://freedns.afraid.org">Free DNS</a>
+    </p>
+
+</body>
+</html>
