Update email address in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h2>Práctica 1 - DNS y Hosting</h2>
 
-    <p>Correo: <a href="mailto:tuemail@correo.com">tuemail@correo.com</a></p>
+    <p>Correo: <a href="mailto:isaac.gvieitez@udc.es">isaac.gvieitez@udc.es</a></p>
 
     <p>
         Servicio utilizado:
